--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
 </head>
 <body>
     <h1>File Upload Test</h1>
-    <form action="http://localhost:3000/upload" method="post" enctype="multipart/form-data">
+    <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" name="file" id="file">
-        <input type="submit" value="Upload File">
+        <input type="button" value="Upload File" onclick="uploadFile()">
     </form>
+    
+    <div id="fileInfo" style="display: none;">
+        <h2>File Information:</h2>
+        <p><strong>Name:</strong> <span id="fileName"></span></p>
+        <p><strong>Type:</strong> <span id="fileType"></span></p>
+        <p><strong>Size:</strong> <span id="fileSize"></span> bytes</p>
+    </div>
+
+    <script>
+        function uploadFile() {
+            const fileInput = document.getElementById("file");
+            const formData = new FormData();
+            formData.append("file", fileInput.files[0]);
+
+            fetch("http://localhost:3000/upload", {
+                method: "POST",
+                body: formData,
+            })
+                .then((response) => response.json())
+                .then((data) => {
+                    const fileInfoDiv = document.getElementById("fileInfo");
+                    const fileNameSpan = document.getElementById("fileName");
+                    const fileTypeSpan = document.getElementById("fileType");
+                    const fileSizeSpan = document.getElementById("fileSize");
+
+                    fileNameSpan.textContent = data.originalname;
+                    fileTypeSpan.textContent = data.mimetype;
+                    fileSizeSpan.textContent = data.size;
+
+                    fileInfoDiv.style.display = "block";
+                })
+                .catch((error) => {
+                    console.error("Error uploading file:", error);
+                });
+        }
+    </script>
 </body>
 </html>
