--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             const formData = new FormData();
             formData.append("file", fileInput.files[0]);
 
-            fetch("https://file-upload-ruddy.vercel.app/upload", {
+            fetch("https://file-upload-arsh.vercel.app/upload", {
                 method: "POST",
                 body: formData,
             })
